add toast for status msges

--- a/demo/index.html
+++ b/demo/index.html
@@ -91,7 +91,7 @@
         };
 
         app.selectedurl = function(e) {
-            console.log("selectedurl:", e.detail.item.id);
+            // console.log("selectedurl:", e.detail.item.id);
             var title = e.detail.item.id;
             this.sources.forEach(function(s) {
                 if (s.title == title) {
