let start-url be undefined

--- a/kml-json.html
+++ b/kml-json.html
@@ -50,7 +50,7 @@ convert kml to geojson.
                  * 
                  */
                 url: {
-                    type: String  ,  value: ''
+                    type: String // ,  value: ''
                 },
 
                 /**
