replace prop coordZ by coordElevs

--- a/kml-json.html
+++ b/kml-json.html
@@ -251,7 +251,7 @@ convert kml to geojson.
                                 } 
                             }
                            
-                            f.properties.coordZ = coordzfeature;
+                            f.properties.coordElevs = coordzfeature;
                         });
                     }
 
